--- a/age-calculator-app-main/style.css
+++ b/age-calculator-app-main/style.css
@@ -35,6 +35,7 @@ body{
     height: 400px;
     /* border: 1px solid black; */
     border-radius: 10px 10px 90px 10px;
+    font-family: 'Poppins';
 }
 .entrada-datos{
     margin-top: 20px;
@@ -46,16 +47,27 @@ body{
 }
 .linea{
     display: inline-block;
-    width: 300px;
     margin-left: 20px;
 }
 hr{
     width: 400px;
 }
 .boton{
-    width: 20px;
+   display: flex;
+   align-items: center;
+   flex-direction: row-reverse;
+   margin-right: 50px;
+   color: rgb(134, 76, 255);
+}
+.pulsa{
+    border:none;
+    width: 50px;
+    height: 50px;
     border-radius: 100%;
-    background-color: purple;
+    background-color: hsl(259, 100%, 65%);
+    background-image: url('img/arrow_down.png');
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 input{
@@ -64,4 +76,16 @@ input{
     border: 1px solid gray;
     border-radius: 10px;
     padding-left: 10px;
+    font-family:'Poppins';
+    font-size: 20px;
+}
+.muestra-datos{
+    margin-left: 30px;
+    font-style: italic;
+    font-size: 4em;
+    font-weight: 800;
+    line-height: 1px;
+}
+.resultado{
+    color: hsl(259, 100%, 65%);
 }
